# satsgate

./: .env.example  CUSTOMER_QUICKSTART.md  Dockerfile  README.md  docker-compose.yml  requirements.txt
.github/ISSUE_TEMPLATE/: beta-operator-hosted.yml  bug-report.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml
app/: admin.py  config.py  db.py  db_admin.py  db_clients.py  db_reports.py  db_verify.py  main.py  plans.py  rate_limit.py
sdk/python/: README.md  pyproject.toml
sdk/python/examples/fastapi_demo/: main.py
sdk/python/examples/fastapi_reference/: README.md  main.py  payer_nwc.py
sdk/python/src/satsgate_sdk/: client.py
sdk/python/src/satsgate_sdk.egg-info/: PKG-INFO
tests/: test_smoke.py
